--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,15 @@ body {
   margin: 0;
   padding: 0;
   background: rgba(0, 0, 0, 0.9);
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+h2 {
+  text-align: center;
+  color: white;
+  margin-top: 70px;
+}
+
 
 ul {
   display: flex;
